--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:sol": "forge build",
     "dev": "nodemon --exec \"yarn build\"",
     "test": "yarn test:js && yarn test:sol",
-    "test:js": " vitest",
+    "test:js": "CI=true vitest",
     "test:sol": "forge test -vvv --match-path \"test/contracts/**\""
   },
   "author": "Ian <i@ianh.xyz>",
@@ -29,15 +29,21 @@
     "inquirer": "^9.1.5",
     "papaparse": "^5.4.1"
   },
+  "peerDependencies": {
+    "react": ">=17"
+  },
   "devDependencies": {
     "@types/node": "^18.15.9",
+    "@vitejs/plugin-react": "^3.1.0",
     "erc721a": "^4.2.3",
     "flatpkg": "^0.1.3",
     "forge-std": "npm:forge-std-no-submodules",
     "nodemon": "^2.0.22",
+    "react": "^18.2.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.2",
+    "vite": "^4.0.4",
     "vitest": "^0.29.7"
   }
 }
