fix comments, fix bin file

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "contracts"
   ],
   "bin": {
-    "allowlist": "./dist/cli.mjs"
+    "allowlist": "./dist/cli.js"
   },
   "keywords": [
     "allowlist",
